# grove-apex-hackathon

./: .gitignore  CODEOWNERS
agent/: .dockerignore  .env  Dockerfile  main.py  pyproject.toml  requirements.txt
agent/LLM/: model.py
agent/LLM/connect/: connector.py
backend/: .dockerignore  Dockerfile  package-lock.json
backend/prisma/: schema.prisma
backend/src/: server.ts
backend/src/controllers/: user.controller.ts
backend/src/lib/: connectDB.ts
backend/src/routes/: index.route.ts  user.route.ts
backend/src/services/: user.service.ts
backend/src/types/: user.type.ts
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/_components/ApprovalWaiting/: Waiting.tsx
frontend/src/_components/LandingPage/: CTA.tsx  Features.tsx  Footer.tsx  Hero.tsx  Landing.tsx  Navbar.tsx  Trusted.tsx
frontend/src/api/: user.api.ts
frontend/src/components/ui/: button.tsx
